Reformat to use Google Style Guide